make test for delete api method
